--- a/Practicas/Ejercicios1-14/6-display.html
+++ b/Practicas/Ejercicios1-14/6-display.html
@@ -39,6 +39,11 @@
 			list-style-position: inside;
 			width: 2000px; height: 20px;
 		}
+		p:nth-child(12){
+			
+			
+			
+		}
 		/* Del resto hay que crear clases por cada párrafo, en función de la propiedad display */
 		
 	</style>
