--- a/Practicas/Ejercicios1-14/6-display.html
+++ b/Practicas/Ejercicios1-14/6-display.html
@@ -39,11 +39,16 @@
 			list-style-position: inside;
 			width: 2000px; height: 20px;
 		}
-		p:nth-child(12){
-			
-			
+		p:nth-child(13){
+			position: relative;
+			top:20px;
+			right:20px;
 			
 		}
+
+		/* p:nth-child(14){
+			position: fixed;
+		} */
 		/* Del resto hay que crear clases por cada párrafo, en función de la propiedad display */
 		
 	</style>
