--- a/Practicas/Ejercicios1-14/Ejercicio 1/selectores_complejos.html
+++ b/Practicas/Ejercicios1-14/Ejercicio 1/selectores_complejos.html
@@ -3,57 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Estilos compuestos</title>
-	<style type="text/css">
-
-		td[colspan='2'], td[rowspan='2']{
-			background-color: #234E54;
-		}
-		td[colspan='3'], td[rowspan='3']{
-			background-color: #ACA759;
-		}
-		td[colspan='4'], td[rowspan='4']{
-			background-color: #CEA885;
-		}
-		#pregunta1,#pregunta2,#pregunta3,#pregunta4,#pregunta6,#pregunta7,#pregunta5{
-			color:purple;
-		}
-		.negrita {
-			font-weight: bold;
-		}
-
-		li#pregunta3 span.negrita{
-			background-color: yellow;
-		}
-
-		.sin_recuadro:last-of-type{
-			text-decoration: underline;
-		}
-
-
-		#pregunta6:first-of-type {
-			background-color: grey;
-		}
-
-
-		li#pregunta6 span.cursiva{
-			font-style: italic;
-		}
-
-
-		li>a:first-child {
-			background-color: grey;
-		}
-
-		.comentarios {
-			border: thin dotted #AC8159;
-			font-family: Verdana, Geneva, sans-serif;
-			font-size: 0.85em;
-			font-style: italic;
-			margin-left: 10%;
-			margin-right: 10%;
-		}
-		
-		</style>
+	<link href='1.css' rel="stylesheet" type="text/css">
 </head>
 
 <body>
