--- a/Practicas/Ejercicios1-14/Ejercicio 2/selectores_enlaces.html
+++ b/Practicas/Ejercicios1-14/Ejercicio 2/selectores_enlaces.html
@@ -3,51 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Estilos compuestos 2</title>
-	<style type="text/css">	
-		/* Incluir los selectores que faltan para lograr los requisitos del enunciado */
-		#capa1 {
-			color: #F9F6C3;
-			background-color: #789498;
-			border: thin solid #234E54;
-		}
+	<link href='2.css' rel="stylesheet" type="text/css">
 
-		div#capa1 p a:hover {
-			background-color:pink;
-		}
-		span.color1 { 
-			background-color: #F9DDC3;
-		}
-
-		span.color2 {
-			background-color: #9786A8;
-		}
-		#capa2 {
-			background-color: #5A4074;
-			color: #F9F6C3;
-		}
-
-		#capa2:hover a{
-			background-color: grey;
-		}
-		#capa3 {
-			background-color: #895F38;
-		}
-		span.color3 {
-			background-color: #CECA85;
-		}
-		#capa3 a[href="http://www.google.es"]:hover{
-			background-color: #CECA85;
-		}
-		#capa4 {
-			background-color: #376369;
-		}
-		span.color4 {
-			background-color: #F9F6C3;
-		}
-		#capa4:hover a[href="http://www.madrid.org"]{
-			background-color: #F9F6C3;
-		}
-	</style>
 </head>
 
 <body>
