--- a/Practicas/Ejercicios1-14/Ejercicio 3/texto1.html
+++ b/Practicas/Ejercicios1-14/Ejercicio 3/texto1.html
@@ -3,47 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Estilos para textos</title>
-	<style type="text/css">
-		/* Añadir los estilos necesarios para que la página web se muestre como en la imagen */
-		table{
-			width: 100%;
-		}
-
-		p:first-of-type{
-			text-indent: 5%;
-			font-weight: bold;
-			font-style: italic;
-		}
-
-		#consejo {
-			background-color: burlywood;
-			color: purple;
-		}
-
-		#textolinea {
-			text-transform: capitalize;
-			font-variant: small-caps;
-			text-decoration: underline;
-			background-color: bisque;
-		}
-
-		h3 {
-			background-color: rosybrown;
-			font-weight: bold;
-			color: bisque;
-		}
-
-		.clase {
-			color: purple;
-			font-style: italic;
-			text-transform: unset;
-		}
-
-		#idparaestilo{
-			background-color: orchid;
-			font-family: Georgia, 'Times New Roman', Times, serif;
-		}
-	</style>
+	<link href='3.css' rel="stylesheet" type="text/css">
 </head>
 
 <body>
