--- a/Practicas/Ejercicios1-14/Ejercicio 6/6-display.html
+++ b/Practicas/Ejercicios1-14/Ejercicio 6/6-display.html
@@ -3,55 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Bloques y lineas</title>
-	<style type="text/css">
-		* { /* Todos los elementos de la página tienen borde */
-			border: thin solid #442A5D;
-		}
-		#negrita{
-			display: block;
-		}
-		p:nth-child(2){
-		display: inline;
-		}
+	<link href='6.css' rel="stylesheet" type="text/css">
 
-		p:nth-child(3){
-		display: inline;
-		}
-
-		p:nth-child(6),p:nth-child(5){
-			
-			display: list-item;
-			list-style-position: inside;
-			margin-left: 40px;
-		}
-		p:nth-child(7){
-			display: none;
-		}
-		
-		.bloqueenlinea{
-			display:inline-block;
-			width: 200px; height: 200px; 
-			
-		}
-
-		p:nth-child(12),p:nth-child(10),p:nth-child(11){
-			display: table-cell;
-			list-style-position: inside;
-			width: 2000px; height: 20px;
-		}
-		p:nth-child(13){
-			position: relative;
-			top:20px;
-			right:20px;
-			
-		}
-
-		/* p:nth-child(14){
-			position: fixed;
-		} */
-		/* Del resto hay que crear clases por cada párrafo, en función de la propiedad display */
-		
-	</style>
 </head>
 
 <body>
